# SMABP

./: CMakeLists.txt  README.md  run.sh
bandits/: Bigtest.mab  D1U2.mab  U3.mab  U5.mab
results/: plot.plt
src/: SMAB.cpp  SMAB.hpp  bandit.cpp  bandit.hpp  main.cpp  random.hpp  strategy.cpp  strategy.hpp
